# RPGAssistant

./: README.md  TurnOrderWidget.cpp  TurnOrderWidget.h  TurnOrderWidget.ui  config.h  graphics.qrc  icons.qrc  logo-lr.qrc  logo-mr.qrc  main.cpp  rpgassistant.pro  sampleturnorderlist.xml  version.h
Backend/: Calendar.h  DataXmlReader.cpp  DataXmlReader.h  Diary.cpp  Diary.h  DiceFormula.cpp  DiceFormula.h  Holiday.cpp  Holiday.h  HolidaysXmlReader.cpp  HolidaysXmlReader.h  Names.cpp  Names.h  NamesXmlReader.cpp  NamesXmlReader.h  Person.cpp  Person.h  PersonsXmlReader.cpp  PersonsXmlReader.h  Race.cpp  Race.h  RacesXmlReader.cpp  RacesXmlReader.h  Species.h  TDECalendar.cpp  TDECalendar.h  TDEModifer.cpp  TDEModifer.h  Utils.cpp  Utils.h
Data/: dsasuiteholidays2xml.py  dsasuitenames2xml.py  dsasuiteprs2xml.py  dsawiegeraces2xml.py
Graphics/: rpgassistant.icns
Tests/: CMakeLists.txt  TestCalendar.cpp
Translations/: rpgassistant_de.ts
UI/: AboutWidget.cpp  AboutWidget.h  AboutWidget.ui  CalendarWidget.cpp  CalendarWidget.h  CalendarWidget.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  NPCGeneratorWidget.cpp  NPCGeneratorWidget.h  NPCGeneratorWidget.ui  TurnOrderWidget.cpp  TurnOrderWidget.h  TurnOrderWidget.ui  Utils.h
android/: AndroidManifest.xml
